--- a/manifest.v2.json
+++ b/manifest.v2.json
@@ -2,17 +2,15 @@
     "name": "PRO LAB Profile fixer",
     "version": "0.0.1",
     "author": "Lukáš Drahník <ldrahnik@gmail.com>",
-    "manifest_version": 3,
+    "manifest_version": 2,
     "description": "Rozšíření do prohlížeče přidává do ISIN možnost kontrolu všech vyšetření, report nalezených nesrovnalostí a jejich částečnou automatickou opravu.",
     "background": {
-      "service_worker": "background/background.js"
+        "scripts": [ "background/background.js" ],
+        "persistent": true
     },
-    "action": {
+    "browser_action": {
         "default_popup": "popup/popup.html"
     },
-    "host_permissions": [
-      "*://*.ksrzis.cz/*"
-    ],
     "content_scripts": [{
         "matches": [
             "*://*.ksrzis.cz/*"
@@ -20,6 +18,7 @@
         "js": ["content/content.js"]
     }],
     "permissions": [
+        "*://*.ksrzis.cz/*",
         "cookies"
     ]
 }
