--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "version": "1.0.6",
     "author": "Lukáš Drahník <ldrahnik@gmail.com>",
     "manifest_version": 3,
-    "description": "Rozšíření do prohlížeče přidává do ISIN možnost kontrolu všech vyšetření, report nalezených nesrovnalostí a jejich částečnou automatickou opravu.",
+    "description": "Přidává do ISIN kontrolu všech vyšetření, reportuje nalezené nesrovnalosti a provádí jejich částečnou automatickou opravu.",
     "background": {
       "service_worker": "background/background.js"
     },
